--- a/main.html
+++ b/main.html
@@ -8,19 +8,44 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button id="openModal">Open Modal</button>
-    <div class="modal" id="myModal">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h2>Modal Header</h2>
-                <button class="close-modal" id="closeModal">&times;</button>
-            </div>
-            <div class="modal-body">
-                <p>Modal Body Content</p>
+ <div class="container mt-5">
+        <!-- Button to Open Modal -->
+        <button id="open-modal" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newton-modal">
+            Open Modal
+        </button>
+    </div>
+
+    <!-- Modal Structure -->
+    <div id="newton-modal" class="modal fade" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <!-- Modal Header -->
+                <!-- <div class="modal-header">
+                    <h5 >New Modal</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div> -->
+                <!-- Modal Body -->
+                <div class="modal">
+                <div class="modal-content">
+                <div class="model-header">
+                     <h2>Modal Header</h2>
+				</div>
+                       <div class="model-body">
+                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>  
+                       <p> model-content-body</p>
+                </div>
+			</div>
+                <!-- Modal Footer -->
+                <!-- <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div> -->
             </div>
         </div>
     </div>
 
-    <script src="script.js"></script>
+ <!-- Bootstrap JS and dependencies (required for modal functionality) -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"></script>
+</body>
 </body>
 </html>
